# robotics_USI

laboratories/: CMakeLists.txt  package.xml
laboratories/launch/: joystick_thymio.launch
laboratories/scripts/: joystick_control.py  moveit.py  proximity_warn.py
messages/: CMakeLists.txt  package.xml
messages/msg/: EKF.msg  path_follow.msg
thymio_project/: CMakeLists.txt~  package.xml
thymio_project/launch/: skeleton.launch  test.launch
thymio_project/paths/: PathToG.csv  PathToI.csv
thymio_project/scenes/: landmarks_fixed.txt
thymio_project/scripts/: EKF.py  path_follow.py
